# breeze-icons

./: .arcconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  COPYING-ICONS  ExtraDesktop.sh  KF5BreezeIconsConfig.cmake.in  KF6BreezeIconsConfig.cmake.in  README.md  REUSE.toml  compile.py  create-app-symlinks.py  generate-24px-versions.py  generate-24px-versions.sh  generate-symbolic-dark.cpp  metainfo.yaml  optimize-svg.sh  optimize.py  patch.diff  prepare.py  qrcAlias.cpp  remove-invisible-rects.py  subsetBinaryIcons.cpp  svg-xml-script-template.py  utilities.py  validate_svg.sh  xml_soup.py
Mod/: Breeze-Mod.sh  README.md  index.theme
autotests/: CMakeLists.txt  dupetest.cpp  newlinetest.cpp  resourcetest.cpp  scalabletest.cpp  symlinktest.cpp  test24x24icons.py  testdata.h.cmake  testhelpers.h  testrcc.cpp
battery/: README.md
breeze/: CMakeLists.txt
breeze-dark/: categories  emotes  mimetypes
breeze-dark/apps/: 32  48  64
breeze-dark/devices/: 64
breeze-dark/places/: 32  64
breeze-dark/status/: 64
cmake/: BundleResources.cmake  GtkUpdateIconCache.cmake
icons/: CMakeLists.txt  breeze-dark.theme.in  breeze.theme.in  breezeicons.h  commonthemeinfo.theme.in  index.theme  index.theme.in
icons-dark/: AUTHORS  CMakeLists.txt  categories  emotes  index.theme  index.theme.in  mimetypes
icons-dark/apps/: 32  48  64
icons-dark/devices/: 64
icons-dark/places/: 32  64
icons-dark/status/: 64
icons/apps/48/: planetkde.svgz
icons/mimetypes/: mimetypes
icons/places/: 128@3x  32@2x  48@2x  64@2x  96@2x
src/: CMakeLists.txt  author-prepare.ini  breezeicons.cpp  breezeicons.h  mimetypes.cookbook.ini  places.cookbook.ini  qrcAlias.cpp
src/lib/: CMakeLists.txt  breezeicons.cpp  breezeicons.h
src/tools/: CMakeLists.txt  generate-symbolic-dark.cpp  qrcAlias.cpp
tools/: CMakeLists.txt  generate-battery.py  generate-symbolic-dark.cpp  qrcAlias.cpp
webfont/: Gruntfile.js  README  package.json
